infrastructure/hbr-keycloak/templates/06_ingress-fts-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-fts-tls
  namespace: hbr-keycloak
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - keycloak.auth.ftscode.de
      secretName: keycloak-server-tls
  rules:
  - host: keycloak.auth.ftscode.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 443
