infrastructure/hbr-keycloak/templates/06_ingress-let-encryp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-letsencrypt
  namespace: hbr-keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/common-name: keycloak.homelab.ftscode.de
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - keycloak.homelab.ftscode.de
      secretName: tls-secret-letsencrypt
  rules:
  - host: keycloak.homelab.ftscode.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 443
